--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css" />
 
     <title>My Portofolio Web</title>
@@ -16,7 +17,10 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Hiba's</a>
+        <a class="navbar-brand" href="#">
+          <img src="https://img.icons8.com/dusk/100/000000/warface-logo.png" alt="" width="30" height="28" class="d-inline-block align-text-top" />
+          Hiba's
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,7 +62,7 @@
 
     <!-- About -->
     <section id="about">
-      <div class="container">
+      <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About me</h2>
@@ -69,12 +73,6 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id architecto nam mollitia dolores et sapiente. Optio, debitis magni itaque qui dolores iure beatae est earum, nobis pariatur officia dolor sit culpa officiis!
               Similique vero omnis cupiditate officia nemo explicabo, voluptates facilis perferendis voluptatem enim soluta facere! Adipisci, deleniti! Quibusdam.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aliquid distinctio eos laboriosam impedit officiis rem voluptatem iure in maxime, nisi, aliquam quam. Incidunt culpa voluptas eveniet quaerat animi, tenetur
-              necessitatibus impedit ipsa ea labore corrupti inventore accusantium ad libero facilis velit sunt ex minima optio qui minus. A, commodi.
             </p>
           </div>
         </div>
@@ -144,20 +142,29 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-5">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terimakasih!</strong> Pesan anda sudah terkirim ke kami.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="portofolio-web-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama</label>
-                <input type="text" class="form-control" id="name" aria-describedby="emailHelp" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" />
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan" placeholder="Masukkan Kritik & saran!"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">kirim</button>
+
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -176,6 +183,39 @@
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/ahmadhiba_/" class="text-white fw-bold">ahmadhiba_</a></p>
     </footer>
     <!-- akhir footer -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbxY2M0GCyZSNtMge5Je0oThP42ufk0O1iiKIq2DDDJrxG-zBkd1fxgoWF02s6QChkc4/exec";
+      const form = document.forms["portofolio-web-form"];
+
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+
+            myAlert.classList.toggle("d-none");
+
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
