--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -45,11 +45,11 @@
     <!-- Akhir navbar -->
 
     <!-- jumbotron -->
-    <div class="pt-5 mb-2 mt-3 rounded-3 text-center" style="background-color: #62afb9d8">
+    <div class="jumbotron" style="background-color: #62afb9d8">
       <img src="img/agv.png" alt="logo" width="150" class="rounded-circle img-thumbnail" />
-      <h1 class="display-6 fw-bold">Muhammad Hibatulloh Hazari</h1>
-      <p class="fs-5">Frontend Developer | Human's</p>
-      <button class="btn btn-primary btn-md" type="button">Click Me!</button>
+      <h1 class="display-6 fw-bold" data-aos="fade-right" data-aos-delay="100" data-aos-duration="2000">Muhammad Hibatulloh Hazari</h1>
+      <p class="fs-5" data-aos="fade-up-left" data-aos-delay="100" data-aos-duration="2000">Frontend Developer | Human's</p>
+      <button class="btn btn-primary btn-md" data-aos="fade-up" data-aos-delay="100" data-aos-duration="3000" type="button">Click Me!</button>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -71,8 +71,8 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id architecto nam mollitia dolores et sapiente. Optio, debitis magni itaque qui dolores iure beatae est earum, nobis pariatur officia dolor sit culpa officiis!
-              Similique vero omnis cupiditate officia nemo explicabo, voluptates facilis perferendis voluptatem enim soluta facere! Adipisci, deleniti! Quibusdam.
+              “Profesional TI yang berorientasi detail sebagai frontend web developer specialist dan system/network technician. Terampil dalam mengoperasikan berbagai platform, memiliki kemampuan komunikasi lisan dan verbal yang baik, dan
+              mampu menjelaskan masalah software yang kompleks dalam istilah yang mudah dipahami. kolaborasi antar tim, pemecahan masalah, dan manajemen proyek.”
             </p>
           </div>
         </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="row mt-3">
           <div class="col-md-4">
-            <div class="card">
+            <div class="card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="2000">
               <img src="img/1.jpg" class="card-img-top" alt="project 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -105,7 +105,8 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <br />
+            <div class="card" data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="2000">
               <img src="img/2.jpg" class="card-img-top" alt="project 2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -113,7 +114,8 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <br />
+            <div class="card" data-aos="zoom-in-left" data-aos-delay="100" data-aos-duration="2000">
               <img src="img/3.jpg" class="card-img-top" alt="project 3" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
